<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".Startup.Login"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="0dp"
            android:contentDescription="@string/login_img"
            android:src="@drawable/img_1"
            android:layout_weight="1">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/login_now"
                android:textColor="@color/greyish_black"
                android:textSize="25sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/login_text"
                android:textColor="@color/greyish"
                android:textSize="18sp">

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autofillHints=" "
                android:background="@drawable/edittext_res"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="15dp"
                android:textAllCaps="false"
                android:textColor="@color/greyish_black"
                android:textColorHint="@color/greyish_black">

            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autofillHints=" "
                android:background="@drawable/edittext_res"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textAllCaps="false"
                android:textColor="@color/greyish_black"
                android:textColorHint="@color/greyish_black">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="20dp"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                tools:ignore="RtlHardcoded">

            </TextView>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/login_btn"
                android:drawableEnd="@drawable/login_icon"
                android:paddingStart="100dp"
                android:paddingEnd="100dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup_through_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/google_btn"
                android:drawableStart="@drawable/icons8_google"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/login_with_google"
                android:textAllCaps="false"
                android:textColor="@color/black">

            </androidx.appcompat.widget.AppCompatButton>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/greyish_black"
                    android:textSize="16sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request"
                    android:textColor="@color/blue"
                    android:textSize="16sp">

                </TextView>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>